# src/app.controller.ts
@@ -1,10 +1,11 @@
-import { Controller, Get} from '@nestjs/common';
-import {ApiOperation, ApiResponse, ApiTags } from '@nestjs/swagger';
+import { Body, Controller, Get, Post } from '@nestjs/common';
+import { ApiOperation, ApiResponse, ApiTags } from '@nestjs/swagger';
+import { AppService } from './app.service';
 
 @ApiTags('OIDC Wrapper')
 @Controller()
 export class AppController {
-  constructor() {}
+  constructor(private readonly appService: AppService) {}
 
   @Get('/health')
   @ApiOperation({ summary: 'to prove the live status of website' })
@@ -13,5 +14,12 @@ export class AppController {
     return {
       status: 'live',
     };
+  }
+
+  @Post('/admin')
+  async createAdmin(
+    @Body('data') data: { username: string; password: string },
+  ) {
+    return await this.appService.createAdmin(data);
   }
 }
